# ecs-engine-v1

./: CMakeLists.txt  compile_commands.json  shell.nix
include/: common.hpp  component_array.hpp  component_manager.hpp  entity_manager.hpp  nitrogen.hpp
include/types/: ng_float.hpp  types.hpp
src/: entity_manager.cpp  main.cpp
